# react-native-rust

./: .gitignore  App.tsx  Cargo.toml  README.md  app.json  buf.gen.yaml  generate.sh  index.js  package.json  proto.sh
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/reactnativerust/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/reactnativerust/: MainActivity.java  MainApplication.java  RNChannel.java  RNController.java  RNPackage.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/reactnativerust/: ReactNativeFlipper.java
ios/: Podfile  ReactNativeRust-Bridge-Header.h  RustMod.swift
ios/ReactNativeRust/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  RNChannel.h  RNChannel.m  RNChannel.swift
ios/ReactNativeRust.xcodeproj/: project.pbxproj
ios/ReactNativeRust.xcodeproj/xcshareddata/xcschemes/: ReactNativeRust.xcscheme
ios/ReactNativeRust.xcworkspace/: contents.xcworkspacedata
ios/ReactNativeRustTests/: ReactNativeRustTests.m
prost-rpc/: Cargo.toml
prost-rpc/src/: lib.rs
proto/: math.proto
rust_mod/: Cargo.toml  build.rs
rust_mod/.cargo/: config.toml
rust_mod/src/: error.rs  lib.rs  rust_mod.udl
src/: NativeModule.ts
uniffi-bindgen-cli/: Cargo.toml
