[package]
name = "rust_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "rust_mod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "0.23.0"

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }
