[package]
name = "rust_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "dylib"]
name = "uniffi_rust_mod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "0.23.0"
prost = "0.11"
tonic = "0.9.2"
prost-simple-rpc = "0.3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
lazy_static = "1.4.0"
prost-rpc =  { path = "../prost-rpc" }

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }
tonic-build = "0.9.2"
prost-build = "0.11"
prost-simple-rpc-build = "0.3.0"
prost-rpc =  { path = "../prost-rpc" }
